# gen-ai

./: .gitignore  docker-compose.yml
jupyter/: Dockerfile  pyproject.toml  requirements.txt
jupyter/notebooks/: Untitled.ipynb  llm_enhanced_knowledge_graphing.ipynb  neo4j_graphrag.ipynb  ollama_sql_execution.ipynb  processed_data.json  qwen_boundingboxes.ipynb  structured_output.ipynb
langfuse/: init-langfuse-db.sql
langfuse/pipelines/: langfuse_filter_pipeline.py
langfuse/pipelines/langfuse_filter_pipeline/: valves.json
litellm/: Dockerfile  config.yaml  init-litellm-db.sql  sample_litellm_curl_request.sh
open-telemetry/: otel-collector-config.yaml
open-webui/tools/: web-search-tool.json
searxng/: settings.yml  settings.yml.new  uwsgi.ini.new
vLLM/: Dockerfile  pyproject.toml
vLLM/scripts/: serve-qwen.sh
