[project]
name = "jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.3.5",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.43",
    "langchain-ollama>=0.2.3",
    "opensearch-py>=2.8.0",
    "pandas>=2.2.3",
]
